--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.9",
+    "@types/knex": "^0.16.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.2.2",
+    "knex": "^0.21.3",
     "nodemon": "^2.0.4",
+    "pg": "^8.3.0",
     "ts-jest": "^26.1.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
