--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "ts-jest": "^26.1.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
+  },
+  "devDependencies": {
+    "madge": "^3.9.2",
+    "tslint": "^6.1.3",
+    "tslint-no-circular-imports": "^0.7.0"
   }
 }
