--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "typescript": "^3.9.7"
   },
   "devDependencies": {
-    "madge": "^3.9.2",
-    "tslint": "^6.1.3",
-    "tslint-no-circular-imports": "^0.7.0"
+    "madge": "^3.9.2"
   }
 }
