--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,13 @@ DB_USER=
 DB_HOST=
 DB_PASSWORD=
 DB_NAME=
+
 ENV=
+
+// usado pelos testes
+DEV_DB_USER=
+DEV_DB_HOST=
+DEV_DB_PASSWORD=
+DEV_DB_NAME=
+DEV_DB_PORT=
+DEV_PORT=
