--- a/tsconfig.json
+++ b/tsconfig.json
@@ -67,6 +67,6 @@
     "forceConsistentCasingInFileNames": true,
       /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/data/initialize.js"],
   "exclude": ["node_modules", "src/**.(spec|test).ts"]
 }
